--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^1.9.3",
     "ngx-popover": "0.0.16",
+    "primeng": "^4.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
